# CubicLauncher

./: .gitignore  .prettierrc  BUILDING.md  Cargo.toml  README.md  VERSIONING.md  build.gradle  build.gradle.kts  eslint.config.js  package.json  pom.xml  settings.gradle  todo.txt  vite.config.ts
.github/workflows/: build.yml  buildjar.yml  release.yml
crates/Communicator/src/: client.rs
crates/aqua/: Cargo.toml  README.md
crates/aqua/.github/workflows/: rust.yml
crates/aqua/examples/: download.rs
crates/aqua/src/: lib.rs
crates/aqua/src/downloaders/: batch.rs  fabric.rs  minecraft.rs  mod.rs
crates/aqua/src/errors/: mod.rs
crates/aqua/src/jre/: client.rs  mod.rs  types.rs
crates/aqua/src/manifest/: mod.rs
crates/aqua/src/natives/: mod.rs
crates/aqua/src/resolvers/: classpath.rs  command.rs  mod.rs
crates/aqua/src/types/: loader.rs  manifest.rs  mod.rs  version.rs
crates/aqua/src/utilities/: mod.rs
crates/launchwerk/: Cargo.toml
crates/launchwerk/examples/: launch.rs
crates/launchwerk/src/: launchwerk.rs  lib.rs
scripts/: e2e.sh
scripts/e2e/: e2e.bat  e2e.sh
src/: App.css  App.vue  api.ts  app.html  main.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  backend.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/minecraft-launcher-core/: Cargo.toml
src-tauri/crates/minecraft-launcher-core/src/bootstrap/: error.rs  mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: path_manager.rs
src-tauri/src/commands/: auth.rs  discord.rs  download.rs  instance.rs  java.rs  mod.rs  modrinth.rs  others.rs  settings.rs  themes.rs
src-tauri/src/core/: app_state.rs  discord.rs  error.rs  event_bus.rs  http_client.rs  instance_manager.rs  launcher.rs  library_wrapper.rs  mod.rs  mod_manager.rs  path_manager.rs  settings_manager.rs
src-tauri/src/core/errors/: auth.rs  core.rs  download.rs  fs.rs  instance.rs  mod.rs  settings.rs
src-tauri/src/services/: addon_manager.rs  discord_presence.rs  instance_manager.rs  java_manager.rs  launcher.rs  mod.rs  settings_manager.rs
src-tauri/src/theme_watcher/: mod.rs
src/assets/css/: index.css
src/composables/: useAccountModal.ts
src/lib/: Drawer.svelte  Logo.svelte  QuickMenu.svelte  cubicApi.ts  launcherService.ts  state.svelte.ts  types.ts  utils.ts
src/lib/i18n/: en.json  (+2 more)
src/routes/: +page.svelte
src/stores/: LanguageStore.ts  LauncherStore.ts
src/styles/: App.css  theme.1.css
static/themes/: dark.json  light.json
todos/: todo.md  todo.txt
(+183 files in other folders)
