[package]
name = "cubiclauncher"
version = "26.4.2"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cubiclauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proton = { git = "https://github.com/CubicLauncher/Proton.git", branch="main"}
claunch-rs = { git = "https://github.com/CubicLauncher/claunch-rs.git", branch ="debugging" }
directories = "6.0.0"
tokio = {version = "1.52.1", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.23.1", features = ["v4"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
postcard = { version = "1.1.3", features = ["alloc"] }
thiserror = "2.0.18"
futures = "0.3.32"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
