[package]
name = "aqua"
version = "0.1.0"
edition = "2024"

[features]
extract-natives = ["dep:zip"]
default = ["extract-natives"]

[dependencies]
futures = "0.3"
log = "0.4"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "8", optional = true }
